# showcase

./: README.md  README.md 
backend/palvferenc_showcase_services/: Cargo.toml
backend/palvferenc_showcase_services/src/: main.rs  model.rs  services.rs  tests.rs
backend/palvferenc_showcase_services/static/: index.html  main-es2015.js  main-es2015.js.map  main-es5.js  main-es5.js.map  polyfills-es2015.js  polyfills-es5.js  styles-es2015.js  styles-es2015.js.map  styles-es5.js  styles-es5.js.map
frontend/palvferenc-showcase/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/palvferenc-showcase/e2e/src/: app.e2e-spec.ts
frontend/palvferenc-showcase/src/: index.html
frontend/palvferenc-showcase/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  user.service.spec.ts  user.service.ts
frontend/palvferenc-showcase/src/app/model/: user.ts
frontend/palvferenc-showcase/src/app/user/: user.component.html  user.component.spec.ts  user.component.ts
frontend/palvferenc-showcase/src/environments/: environment.prod.ts  environment.ts
