[package]
name = "palvferenc_showcase_services"
version = "0.1.0"
authors = ["palvferenc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-cors = "0.2.0"